--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "weatherapp",
   "version": "1.0.0",
   "description": "",
-  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
@@ -16,6 +15,8 @@
   },
   "dependencies": {
     "css-loader": "^6.8.1",
-    "style-loader": "^3.3.3"
+    "dotenv": "^16.3.1",
+    "style-loader": "^3.3.3",
+    "unicode": "^14.0.0"
   }
 }
